--- a/muave1.html
+++ b/muave1.html
@@ -37,11 +37,11 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-12">
+					<div class="col-lg-12 col-xs-12">
 						<p style="text-align: center;font-size: 24px;padding-top: 10px; font-weight: bold;color:  #0CACA7;">500.000 VND</p>
 					</div>
-					<div style="width: 100%; padding: 2%;">
-						<p><b>Mời bạn điền các thông tin sau</b></p>
+					<div class="col-lg-12 col-xs-12" style="padding:5%; width: 100%;">
+						<p style="width: 300px;"><b>Mời bạn điền các thông tin sau</b></p>
 					<form class="form-dki">
 					  <div class="row">
 					    <div class="col-lg-6">
@@ -75,7 +75,7 @@
 					<div class="law">
 						<p><b>• Nội quy khách vào cửa:</b></p>
 						<p>• Xuất trình vé tại quầy check-in của BTC</p>
-						<p>• Không được đi vào khu vực fairway và green các hố
+						<p>• Không được đi vào khu vực fairway và green các hố</p>
 						<p>• Trang phục lịch sự, phù hợp</p>
 						<p>• Giữ yên lặng và tắt chuông điện thoại</p>
 						<p>(Trường hợp vi phạm các quy định của BTC, BTC có quyền yêu cầu quý khách ra khỏi khu vực thi đấu của giải</p>
