--- a/muave3.html
+++ b/muave3.html
@@ -62,7 +62,7 @@
 					<div class="law">
 						<p><b>• Nội quy khách vào cửa:</b></p>
 						<p>• Xuất trình vé tại quầy check-in của BTC</p>
-						<p>• Không được đi vào khu vực fairway và green các hố
+						<p>• Không được đi vào khu vực fairway và green các hố</p>
 						<p>• Trang phục lịch sự, phù hợp</p>
 						<p>• Giữ yên lặng và tắt chuông điện thoại</p>
 						<p>(Trường hợp vi phạm các quy định của BTC, BTC có quyền yêu cầu quý khách ra khỏi khu vực thi đấu của giải</p>
