--- a/test.html
+++ b/test.html
@@ -41,27 +41,27 @@
 <body>
 	
 	<div class="container">
- <div style="width: 80%; margin: 0px auto;">
- 	 <div style="background: #004251; text-align: center; display: flex; flex-wrap: wrap; height: 50px; padding-left: 10%" class="nav nav-tabs">
- 	 	<div style="width: 15%; padding-top: 10px">
+ <div class="row">
+ 	 <ul style="background: #004251;" class="nav nav-tabs justify-content-center">
+ 	 	<li>
 	    	<a data-toggle="tab" href="#home">Home</a>
-		</div>
-		<div style="width: 15%; padding-top: 10px">
+        </li>
+		<li>
 	   		<a data-toggle="tab" href="#menu1">Menu </a>
-		</div>
-	  <div style="width: 15%; padding-top: 10px">
-	   		<a data-toggle="tab" href="#menu2">Menu </a>
-		</div>
-	  <div style="width: 15%; padding-top: 10px">
-	   		<a data-toggle="tab" href="#menu3">Menu </a>
-		</div>
-	      <div style="width: 15%; padding-top: 10px">
-	   		<a data-toggle="tab" href="#menu4">Menu </a>
-		</div>
-	      <div style="width: 15%; padding-top: 10px">
-	   		<a data-toggle="tab" href="#menu5">Menu </a>
-		</div>
-  	</div>
+		</li>
+	   <li >
+            <a data-toggle="tab" href="#menu1">Menu </a>
+        </li>
+	  <li >
+            <a data-toggle="tab" href="#menu1">Menu </a>
+        </li>
+	     <li >
+            <a data-toggle="tab" href="#menu1">Menu </a>
+        </li>
+	      <li >
+            <a data-toggle="tab" href="#menu1">Menu </a>
+        </li>
+  	</ul>
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
      	<div class="row">
