--- a/truyvanthongtin.html
+++ b/truyvanthongtin.html
@@ -22,20 +22,21 @@
 		<h1 class="title-info">Mua vé</h1>
 		<div class="content">
 			<div class="container">
-				<div class="row">
+						<div class="row">
 					<div class="title-intro">
 						<img style="width: 150px; height: 89px;" src="img/vao.png">
 						<p>vô địch golf nghiệp dư nam quốc gia</p>
 					</div>
 					<div class="am"">
 						<div class="time-day">
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-calendar "></i> 15/03/2020</p></div>
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p></div>
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-file-pdf-o"></i> <a href="#">Điều lệ giải</a></p></div>
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p></div>
+							<div class="row">
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-calendar "></i> 15/03/2020</p></div>
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p></div>
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-file-pdf-o"></i> <a href="#">Điều lệ giải</a></p></div>
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p></div>
+							</div>
 						</div>
 					</div>
-					
 				</div>
 			</div>
 		</div>
