--- a/giaidau.html
+++ b/giaidau.html
@@ -47,7 +47,7 @@
 										<p><i class="fa fa-user"></i> 50/100</p>
 									</span>
 								</div>
-								<div style="display: flex; width: 100%; padding-bottom: 20px;" class="toumaf">
+								<div style="display: flex; width: 100%; padding-bottom: 20px; border-top:1px dashed #878787;" class="toumaf">
 									<div style="margin-right: 3%; width: 180px;" class="tournaments-button">
 										<p style="font-size: 20px;"class="tournaments-price1">5.000.000 VND</p>
 									<button  class="button-price1">Tham gia</button>
