--- a/index.html
+++ b/index.html
@@ -215,11 +215,15 @@ h2
             <p style="text-align: center;"><a href="#">Xem cả mùa giải 20 ngày thi đấu chỉ với 1000.000 VND. Vé chỉ bán tới hết 31/2/2020.</a><p>
         </div>
     </div>
+
           <div class="container text-center lich-box">
                <div class="row">
                     <div id="mainPageTitle"></div>
                     <div id="borderGrayLine"></div>
                     <div id="superHeroTabs"></div>
+
+
+
                     <div id="Batman_TabContent" class="tabContainerClass">
 
 		                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -242,7 +246,7 @@ h2
 		                </div>
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 style-top">
 		                    <div class="all-ct-button">
-		                        <div class="button-chi-tiet">
+		                        <div class="button-chi-tiet bt1">
 		                            <div class="button-price-ct-1">
 		                                <p>4.000.000 VND</p>
 		                            </div>
@@ -250,7 +254,7 @@ h2
 		                                <button>THAM GIA</button>
 		                            </div>
 		                        </div>
-		                        <div class="button-chi-tiet">
+		                        <div class="button-chi-tiet bt2">
 		                            <div class="button-price-ct">
 		                                <p style="color:#0CACA7;">4.000.000 VND</p>
 		                            </div>
@@ -261,12 +265,11 @@ h2
 		                    </div>
 		                </div>
             		</div>
-
                 </div>
                     <div id="Luke_TabContent" class="tabContainerClass">
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 							<div class="img-content">
-								<img src="img/group2.png">
+								<img src="img/logo2.png">
 							</div>
 						</div>
 						<div class="col-lg-6 col-sm-6 col-xs-12">
@@ -343,6 +346,7 @@ h2
 							</div>
 						</div>
 					</div>
+
                     <div id="Spock_TabContent" class="tabContainerClass">
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 							<div class="img-content">
@@ -383,6 +387,7 @@ h2
 							</div>
 						</div>
                     </div>
+
                     <div id="Hulk_TabContent" class="tabContainerClass">
 
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -425,6 +430,7 @@ h2
 						</div>
 
                     </div>
+
                     <div id="JackSparrow_TabContent" class="tabContainerClass">
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 							<div class="img-content">
